# VAE-Motion-Planning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attentionVae.ipynb  convVae-100.ipynb  convVae.ipynb  cvae-mnist.ipynb  cvae_gap-0.00002.ipynb  cvae_gap-0.002.ipynb  cvae_gap-deep-0.00002.ipynb  cvae_gap-deep-0.002.ipynb  cvae_gap-deep.ipynb  cvae_gap-deeper.ipynb  cvae_gap.ipynb  cvae_highway-attention.ipynb  cvae_highway.ipynb  cvae_minicity-attention-nogoal.ipynb  cvae_minicity-attention.ipynb  cvae_occ-0.00002.ipynb  cvae_occ-0.02.ipynb  cvae_occ-deep-0.002.ipynb  cvae_occ-deep.ipynb  cvae_occ-deeper.ipynb  cvae_occ.ipynb  data2sqlite.ipynb  data_parallel_tutorial.ipynb  example-app.cpp  main.cpp  makeocc.ipynb  narrowpassage.cpp  ompl_cvae_minicity-attention-kinematic.ipynb  ompl_cvae_minicity-attention-reedshepp.ipynb  ompl_cvae_minicity-attention.ipynb  ompl_highway.ipynb  ompl_narrowpassage-random.ipynb  ompl_narrowpassage.ipynb  plt_results.ipynb  requirements.txt
data/: AttentionDataset.py  MinicityDataset.py  NarrowPassDataset.py  RRTDataset.py
models/: CVAE.py  convVae.py  gap-0.00002.pt  gap-0.002.pt  gap-shadow.pt  minicity.py  minicity_nogoal.py  minicity_nogoal_bigger.py  occ-0.00002.pt  occ-0.002.pt  occ-shadow.pt
ompl/: DynamicCarPlanning.ipynb
ompl/demos/: OptimalPlanning.ipynb  Point2DPlanning.ipynb  RandomWalkPlanner.ipynb  StateSampler.ipynb  (+1 more)
scenarios/: bay_bridge.py  csv2occ-Copy1.ipynb  csv2occ-Copy2.ipynb  csv2occ.ipynb  emission2cr.ipynb  emission2cr.py  minicity.py  net2cr.py  plot.py  plt_scenario.py  showCr.py  showScenario.py  test.py  未命名.ipynb
utils/: HighWay.py  Minicity.py  MinicityOmpl.py  NarrowPassage.py  mnist.py
(+58 files in other folders)
